<resources>
    <string name="app_name">jetpack</string>
    <string name="save">保存</string>

    <!-- 我的项目 -->
    <string name="mine">我的</string>
    <string name="discovery">发现</string>
    <string name="subscribe">订阅</string>
    <string name="home">首页</string>
    <string name="follower">粉丝</string>
    <string name="following">关注</string>
    <string name="theme">主题</string>
    <string name="dynamic">动态</string>
    <string name="default_size">0</string>
    <string name="default_nickname">点击登录账号</string>
    <string name="mine_love">我的收藏</string>
    <string name="mine_theme">创建主题</string>
    <string name="mine_message">我的消息</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="account_manager">账号管理</string>
    <string name="personal_information">个人信息</string>
    <string name="edit">编辑</string>
    <string name="account_information">账号信息</string>
    <string name="update_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="re_password">确认密码</string>
    <string name="login_out">退出登录</string>
    <string name="default_motto">简介:这个人很懒,什么都没有写!</string>
    <string name="motto_header">简介:</string>
    <string name="who_am_i">我是谁</string>
    <string name="default_time">2019-01-09 23:23:23</string>
    <string name="default_content">写一些你想写的东西....</string>
    <string name="default_title">主题名称....</string>
    <string name="theme_list">主题列表</string>
    <string name="image">详情</string>
    <string name="nickname">昵称</string>
    <string name="city">城市</string>
    <string name="article">资讯</string>

    <!-- 个人主页 -->
    <string name="create">新建资讯</string>
    <!-- 发布资讯 -->
    <string name="publish">发布</string>
    <string name="create_theme">创建主题</string>

    <string name="content">
        Material design是最重视跨平台体验的一套设计语言。由于规范严格细致，保证它在各个平台使用体验高度一致。不过目前还只有Google自家的服务这么做，毕竟其他平台有自己的规范与风格。
        Material design是最重视跨平台体验的一套设计语言。由于规范严格细致，保证它在各个平台使用体验高度一致。不过目前还只有Google自家的服务这么做，毕竟其他平台有自己的规范与风格。
        Material design是最重视跨平台体验的一套设计语言。由于规范严格细致，保证它在各个平台使用体验高度一致。不过目前还只有Google自家的服务这么做，毕竟其他平台有自己的规范与风格。
        Material design是最重视跨平台体验的一套设计语言。由于规范严格细致，保证它在各个平台使用体验高度一致。不过目前还只有Google自家的服务这么做，毕竟其他平台有自己的规范与风格。
        Material design是最重视跨平台体验的一套设计语言。由于规范严格细致，保证它在各个平台使用体验高度一致。不过目前还只有Google自家的服务这么做，毕竟其他平台有自己的规范与风格。
        Material design是最重视跨平台体验的一套设计语言。由于规范严格细致，保证它在各个平台使用体验高度一致。不过目前还只有Google自家的服务这么做，毕竟其他平台有自己的规范与风格。
        Material design是最重视跨平台体验的一套设计语言。由于规范严格细致，保证它在各个平台使用体验高度一致。不过目前还只有Google自家的服务这么做，毕竟其他平台有自己的规范与风格。
        Material design是最重视跨平台体验的一套设计语言。由于规范严格细致，保证它在各个平台使用体验高度一致。不过目前还只有Google自家的服务这么做，毕竟其他平台有自己的规范与风格。
        Material design是最重视跨平台体验的一套设计语言。由于规范严格细致，保证它在各个平台使用体验高度一致。不过目前还只有Google自家的服务这么做，毕竟其他平台有自己的规范与风格。
        Material design是最重视跨平台体验的一套设计语言。由于规范严格细致，保证它在各个平台使用体验高度一致。不过目前还只有Google自家的服务这么做，毕竟其他平台有自己的规范与风格。
        Material design是最重视跨平台体验的一套设计语言。由于规范严格细致，保证它在各个平台使用体验高度一致。不过目前还只有Google自家的服务这么做，毕竟其他平台有自己的规范与风格。
    </string>
    <string name="default_theme_name">主题名称</string>
    <string name="default_theme_note">这里是简介啊！</string>
    <string name="default_count">999</string>
    <string name="default_create">资讯创建人</string>
    <string name="empty">空空如也</string>

</resources>
