<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"/>

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/default_create"
                android:textColor="@color/colorWhite2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_image"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/follower_blue"
                android:paddingStart="6dp"
                android:paddingTop="2dp"
                android:paddingEnd="6dp"
                android:paddingBottom="2dp"
                android:text="@string/theme"
                android:textColor="@color/colorWhite2"
                app:layout_constraintBottom_toBottomOf="@+id/tv_nickname"
                app:layout_constraintStart_toEndOf="@+id/tv_nickname"
                app:layout_constraintTop_toTopOf="@+id/tv_nickname"/>

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_article_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_theme_note"/>

            <LinearLayout
                android:id="@+id/ll_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_image">

                <com.lznby.jetpack.content.design.view.ImageTextView
                    android:id="@+id/itv_read_count"
                    style="@style/image_text_action"
                    android:drawableLeft="@mipmap/icon_read_count"
                    android:text="@string/default_count"
                    app:drawableLeftHeight="24dp"
                    app:drawableLeftWidth="24dp"/>

                <com.lznby.jetpack.content.design.view.ImageTextView
                    android:id="@+id/itv_comment_count"
                    style="@style/image_text_action"
                    android:drawableLeft="@mipmap/icon_commit"
                    android:text="@string/default_count"
                    app:drawableLeftHeight="24dp"
                    app:drawableLeftWidth="24dp"/>

                <com.lznby.jetpack.content.design.view.ImageTextView
                    android:id="@+id/itv_love_count"
                    style="@style/image_text_action"
                    android:drawableLeft="@mipmap/icon_love_gray"
                    android:text="@string/default_count"
                    app:drawableLeftHeight="24dp"
                    app:drawableLeftWidth="24dp"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>