<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/who_am_i"/>

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:lineSpacingMultiplier="1.2"/>

            <FrameLayout
                android:id="@+id/fl_container"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_create_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/default_time"/>

            <LinearLayout
                android:id="@+id/ll_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:layout_gravity="right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_image">

                <com.lznby.jetpack.content.design.view.ImageTextView
                    android:id="@+id/itv_read_count"
                    style="@style/image_text_action"
                    android:drawableLeft="@mipmap/icon_read_count"
                    android:text="@string/default_count"
                    app:drawableLeftHeight="24dp"
                    app:drawableLeftWidth="24dp"/>

                <com.lznby.jetpack.content.design.view.ImageTextView
                    android:id="@+id/itv_comment_count"
                    style="@style/image_text_action"
                    android:drawableLeft="@mipmap/icon_commit"
                    android:text="@string/default_count"
                    app:drawableLeftHeight="24dp"
                    app:drawableLeftWidth="24dp"/>

                <com.lznby.jetpack.content.design.view.ImageTextView
                    android:id="@+id/itv_love_count"
                    style="@style/image_text_action"
                    android:drawableLeft="@mipmap/icon_love_gray"
                    android:text="@string/default_count"
                    app:drawableLeftHeight="24dp"
                    app:drawableLeftWidth="24dp"/>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>

